@@ -4,9 +4,9 @@ import com.loopers.support.error.CoreException;
 import com.loopers.support.error.ErrorType;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 @Component
@@ -14,6 +14,7 @@ public class OrderService {
 
     private final OrderRepository orderRepository;
 
+    @Transactional
     public OrderInfo createOrder(OrderCommand.Order orderCommand) {
         List<OrderItemEntity> items = orderCommand.orderItems().stream()
                 .map(item -> OrderItemEntity.of(item.productId(), item.quantity(), item.price()))
@@ -23,13 +24,15 @@ public class OrderService {
         return OrderInfo.from(saved);
     }
 
+    @Transactional(readOnly = true)
     public List<OrderInfo> getOrders(Long userId) {
-        List<OrderEntity> orderEntities = orderRepository.findByUserId(userId);
-
-        return orderEntities.stream().map(OrderInfo::from).collect(Collectors.toList());
-
+        var orders = orderRepository.findByUserId(userId);
+        return orders.stream()
+                .map(OrderInfo::from)
+                .toList();
     }
 
+    @Transactional(readOnly = true)
     public OrderInfo getOrder(Long orderId) {
         OrderEntity orderEntity = orderRepository.findById(orderId)
                 .orElseThrow(() -> new CoreException(ErrorType.NOT_FOUND));
